--- a/Themes/Shale/Themes/Controls/Window.xaml
+++ b/Themes/Shale/Themes/Controls/Window.xaml
@@ -324,6 +324,7 @@
     </Style>
 
     <Style x:Key="{x:Type win:DecoratableWindow}" TargetType="{x:Type win:DecoratableWindow}" BasedOn="{StaticResource {x:Type win:ShadowedWindow}}">
+        <Setter Property="SnapsToDevicePixels" Value="True" />
         <!--Setter Property="HideTransitionDuration" Value="50"/-->
         <Setter Property="TitlebarHeight" Value="31"/><!--24-->
         <!--Setter Property="Background" Value="{DynamicResource WindowBackgroundBrush}" /-->
