--- a/Themes/Shale/Themes/Controls/ListView.xaml
+++ b/Themes/Shale/Themes/Controls/ListView.xaml
@@ -14,13 +14,13 @@
         <Setter Property="Margin" Value="0"/>
         <Setter Property="Padding" Value="0"/>
         <Setter Property="ItemContainerStyle" Value="{DynamicResource {x:Type ListViewItem}}"/>
-        <Setter Property="uib:ScrollAnimationBehavior.IsEnabled" Value="True"/>
+        <!--Setter Property="uib:ScrollAnimationBehavior.IsEnabled" Value="True"/>
         <Setter Property="uib:ScrollAnimationBehavior.TimeDuration" Value="00:00:00.20"/>
         <Setter Property="uib:ScrollAnimationBehavior.EasingFunction">
             <Setter.Value>
                 <CubicEase EasingMode="EaseOut"/>
             </Setter.Value>
-        </Setter>
+        </Setter-->
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ListView">
