--- a/Themes/Shale/Themes/Controls/ScrollBar.xaml
+++ b/Themes/Shale/Themes/Controls/ScrollBar.xaml
@@ -723,13 +723,14 @@
     <Style x:Key="{x:Type ScrollViewer}" TargetType="{x:Type ScrollViewer}">
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="Padding" Value="0"/>
-        <Setter Property="uib:ScrollAnimationBehavior.IsEnabled" Value="True"/>
+        <!--Setter Property="uib:ScrollAnimationBehavior.IsEnabled" Value="True"/>
         <Setter Property="uib:ScrollAnimationBehavior.TimeDuration" Value="00:00:00.20"/>
         <Setter Property="uib:ScrollAnimationBehavior.EasingFunction">
             <Setter.Value>
                 <CubicEase EasingMode="EaseOut"/>
             </Setter.Value>
-        </Setter>
+        </Setter-->
+        <!--Setter Property="uib:SmoothScroll2Behavior.UseSmoothScrolling" Value="True"/-->
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ScrollViewer}">
@@ -1281,6 +1282,7 @@
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <ScrollContentPresenter Margin="{TemplateBinding Padding}" Grid.Column="0" Grid.Row="0"/>
+                        <!--uib:SmoothScroll2PresenterBehavior.UseSmoothScrolling="{Binding (uib:SmoothScroll2Behavior.UseSmoothScrolling), RelativeSource={RelativeSource Mode=TemplatedParent}}"-->
                         <ScrollBar x:Name="PART_VerticalScrollBar" Value="{TemplateBinding VerticalOffset}" Maximum="{TemplateBinding ScrollableHeight}" ViewportSize="{TemplateBinding ViewportHeight}" Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}" Grid.Column="1" Grid.Row="0"/>
                         <ScrollBar x:Name="PART_HorizontalScrollBar" Orientation="Horizontal" Value="{TemplateBinding HorizontalOffset}" Maximum="{TemplateBinding ScrollableWidth}" ViewportSize="{TemplateBinding ViewportWidth}" Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}" Grid.Column="0" Grid.Row="1"/>
                     </Grid>
