--- a/Themes/Shale/Themes/Controls/ToggleSwitch.xaml
+++ b/Themes/Shale/Themes/Controls/ToggleSwitch.xaml
@@ -9,9 +9,7 @@
 
     <Style x:Key="{x:Type ui:ToggleSwitch}" TargetType="{x:Type ui:ToggleSwitch}">
         <Setter Property="SnapsToDevicePixels" Value="true" />
-        <!--Setter Property="MinWidth" Value="200"/-->
-        <!--Setter Property="Height" Value="50"/-->
-        <Setter Property="Height" Value="23"/>
+        <Setter Property="MinHeight" Value="23"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent" />
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
